<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Coroutine">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#333333"
        android:fontFamily="@font/roboto"
        android:lineSpacingExtra="8sp"
        android:paddingTop="28dp"
        android:paddingBottom="28dp"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="#D7D7D7"
        android:textSize="@dimen/title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_third"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#444444"
        android:fontFamily="@font/roboto"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/titulo_coroutune"
        android:textAlignment="center"
        android:textColor="#f5f5f7"
        android:textSize="@dimen/subtitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_second" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Iterations"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:hint="# Iterations: 1000000"
        android:inputType="number"
        android:textAlignment="center"

        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textview_co"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_third"
        app:strokeColor="@color/colorTextLink" />

    <TextView
        android:id="@+id/textview_co"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/roboto"
        android:text="@string/threadString1"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_third" />

    <TextView
        android:id="@+id/textview_timeCo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/hello_second_fragment"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_co" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_co"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="128dp"
        android:text="@string/start_button"
        android:textColor="@color/colorTextLink"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_co2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_timeCo"
        app:strokeColor="@color/colorTextLink" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_co2"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4 Threads"
        android:textColor="@color/colorTextLink"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_single_thread" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_no_usable"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextLinkUsed"
        android:text="Coroutines"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>